# esphome

./: .gitignore  common.yaml  common2.yaml  common_no_web.yaml  common_sensors.yaml  esphome.code-workspace  generate_cpp_properties.py  pyproject.toml  requirements.in
.cursor/: instructions  instructions.mdc  rules
.cursor/rules/: custom_components.mdc  rules.mdc
ble_gateway/: .gitignore  ble_gateway.yml
electricity_meter/: README.md  elektricity_meter.yml
electricity_meter/components/: .gitignore
electricity_meter/components/irda_meter/: __init__.py  irda_meter.cpp  irda_meter.h
env-meter/: env-meter.yml
esp32-cam/: esp32-cam.yml  esp_client.py
esp_zigbee_gateway/: s3_wroom.yml
floor-heating-controller/: floor-heating.yml
heating-controller-v2/: heating-controller.yml
multimeter121gw/: esp_client.py  multimeter121gw.yml  reflow_curve.ipynb
multimeter121gw/components/multimeter_121gw/: __init__.py  multimeter121gw.cpp  multimeter121gw.h  multimeter121gw_parser.cpp  multimeter121gw_parser.h
nibe-controller/: nibe_controller-v2.yml
nibe-controller/components/nibe_controller/: __init__.py  nibe_controller.cpp  nibe_controller.h
nibe_controller/: nibe_controller.yml
nibe_controller_c3/: nibe_controller_c3.yml
nibe_controller_c6/: nibe_controller_c6.yml
power_meter/: power_meter.yml
reflow-controller/: .gitignore  reflow-controller.yml  reflow_profile.csv
reflow-controller/components/reflow_curve/: __init__.py  gen_reflow_profile.py  pid_controller.cpp  pid_controller.h  reflow_curve.cpp  reflow_curve.h
relay/: relay.yml
(+7 files in other folders)
