[project]
name = "esphome"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "==3.9.13"
dependencies = [
    "esphome==2024.12.4",
    "bokeh==3.2.2",
    "jupyter==1.0.0"
]


[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"
